src/Tests/Spectre.Console.Cli.Tests/Expectations/Parsing/CannotAssignValueToFlag/Test_2.Output.verified.txt
Error: Flags cannot be assigned a value.

       dog -a=indeterminate foo
           ^^ Can't assign value